# Personalized-Sector-with-Knowledge-Graph

./: .gardenignore  .gitignore  .gitmodules  Makefile  README.md  garden.yml  pull_request_template.md  pyproject.toml  setup.cfg
.circleci/: config.yml
.config/: monitors.xml
.config/dconf/: user
.config/gtk-3.0/: bookmarks
.config/pip/: pip.conf
.config/pulse/: cookie
.config/pypoetry/: auth.toml  config.toml
.config/yelp/: yelp.cfg
.docker/: config.json
.git-old/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-old/logs/: HEAD
.gnupg/: pubring.kbx  trustdb.gpg
.helm/repository/: repositories.yaml
.ipython/profile_default/: history.sqlite
.jupyter/: migrated
.kube/: config  kubectx
.local/share/: session_migration-ubuntu
.pki/nssdb/: key4.db
doc/: cross_talking.tex
doc/ml2020/: main.bib  ml2020.tex
doc/peers/: document.tex  main.bib
docker/: ml.base.Dockerfile  ml.dev.garden.Dockerfile
emr/: bootstrap_python.sh  emr_config.json  populate_livy_conf.py
notebooks/: Big Graph Un-Supervised Learning.ipynb  Borrower_Description_Concatenation.ipynb  Borrower_Hetero_Embedding.ipynb  Clustering on Description.ipynb  Company_Level_Forecasting.ipynb  Data Normalization.ipynb  Data Organiser.ipynb  Data_API_PS_Demo.ipynb  Data_Normalization.ipynb  Feature Auto Encoder.ipynb  Import Data.ipynb  NDE Time Series Problem.ipynb  NDE_Time_Series_Problem.ipynb  Personalize Sector Demo.ipynb  Proof_of_Concept_KG.ipynb  RNN LSTM AutoEncoder.ipynb  Revenue_Growth_Revenue_Graph.ipynb  Sector and Location Analysis.ipynb  Sector_Analysis.ipynb  TOTAL_LIAB_EQUITY_Ratio.ipynb
notebooks/EncoderDecoder/: keras_metadata.pb  saved_model.pb
notebooks/company2vec/: Company_searcher.ipynb  ES_explorer.ipynb  Get_Stopwords_List.ipynb  Investigate_ES.ipynb  Investigate_ES_Industry_Prediction.ipynb  Investigate_LDA_lemmatized.ipynb  Investigate_LDA_lemmatized_ES_Combined.ipynb  Investigate_LDA_not_lemmatized.ipynb  Investigate_LDA_not_lemmatized_ES_Combined.ipynb  Investigate_SVD.ipynb  QueryEnhancer.ipynb  QueryEnhancer_NMF.ipynb  (+14 more)
pypi_utils/: README.md  assume_codeartifact.sh  pypi-login.sh  upload.sh
scripts/: install-python.sh  linter.sh  linter_dryrun.sh  provision_emr.sh  run-test.sh  sm_deps.sh  start-dev.sh
(+275 files in other folders)
